Fix: overflow

--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -380,6 +380,7 @@
     } */
     .oasisDreamContainContainer {
         padding-top: 160px;
+        overflow: hidden;
     }
     .findHomeTitleSection {
         padding-top: 160px;
